--- a/modules/admin/locales/fr/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/fr/LC_MESSAGES/admin.po
@@ -74,8 +74,8 @@ msgid "Hashing function"
 msgstr "Fonction de hachage"
 
 msgid ""
-"Hi, this is the status page of SimpleSAMLphp. Here you can see if your session is timed out, how long\n"
-"     it lasts until it times out and all the attributes that are attached to your session."
+"Hi, this is the status page of SimpleSAMLphp. Here you can see if your session is timed out, how long"
+" it lasts until it times out and all the attributes that are attached to your session."
 msgstr ""
 "Bonjour, voici la page d'état de SimpleSAMLphp. Ici, vous pouvez voir si votre session\n"
 "est expirée, sa durée de validité et tous les attributs qui y sont attachés."
