--- a/modules/admin/locales/nl/LC_MESSAGES/admin.po
+++ b/modules/admin/locales/nl/LC_MESSAGES/admin.po
@@ -74,8 +74,8 @@ msgid "Hashing function"
 msgstr "Hashfunctie"
 
 msgid ""
-"Hi, this is the status page of SimpleSAMLphp. Here you can see if your session is timed out, how long\n"
-"     it lasts until it times out and all the attributes that are attached to your session."
+"Hi, this is the status page of SimpleSAMLphp. Here you can see if your session is timed out, how long"
+" it lasts until it times out and all the attributes that are attached to your session."
 msgstr "Hallo, dit is de statuspagina van SimpleSAMLphp. Hier kunt u zien of uw sessie verlopen is, hoe lang het nog duurt totdat die verloopt en alle attributen die met uw sessie verbonden zijn."
 
 msgid "Hosted IdP metadata present"
