--- a/locales/lb/LC_MESSAGES/messages.po
+++ b/locales/lb/LC_MESSAGES/messages.po
@@ -60,7 +60,7 @@ msgid "E-mail address:"
 msgstr "E-mail Adress"
 
 msgid "Enter your username and password"
-msgstr "Gid w.e.g Aeren Benotzernumm an d Passwuert an"
+msgstr "Gid w.e.g Aeren Benotzernumm an d'Passwuert an"
 
 msgid "Entitlement regarding the service"
 msgstr "Berechtegung"
