--- a/locales/lb/LC_MESSAGES/messages.po
+++ b/locales/lb/LC_MESSAGES/messages.po
@@ -115,7 +115,7 @@ msgid "Error processing request from Service Provider"
 msgstr "Fehler beim Bearbeschten vun der Unfro vum Service Provider"
 
 msgid "Enter your username and password"
-msgstr "Gid w.e.g Aeren Benotzernumm an d Passwuert an"
+msgstr "Gid w.e.g Aeren Benotzernumm an d'Passwuert an"
 
 msgid "Home postal address"
 msgstr "Adress"
