--- a/modules/core/locales/nn/LC_MESSAGES/core.po
+++ b/modules/core/locales/nn/LC_MESSAGES/core.po
@@ -47,7 +47,7 @@ msgstr "Om problemet vedvarar, kan du rapportere det til systemadministratorane.
 msgid "If you are a developer who is deploying a single sign-on solution, you have a problem with the metadata configuration. Verify that metadata is configured correctly on both the identity provider and service provider."
 msgstr "Om du er ein utviklar som set opp ei \"single sign-on\" løysing, så har du eit problem med metadataoppsettet. Kontroller at metadata er rett satt opp hjå både identitetsleverandøren og tenesteleverandøren."
 
-msgid "If you are an user who received this error after following a link on a site, you should report this error to the owner of that site."
+msgid "If you are a user who received this error after following a link on a site, you should report this error to the owner of that site."
 msgstr "Om du er ein brukar som mottok denne feilen etter at du følgde ei lenke på ei nettside, så bør du melde denne feilen til eigaren av den nettsida."
 
 msgid "If you are the administrator of this installation, please refer to the <a href=\"https://simplesamlphp.org/docs/\">SimpleSAMLphp documentation</a> for how to configure and interact with the software."
