i18n move attributes into an attributes domain

--- a/locales/ca/LC_MESSAGES/attributes.po
+++ b/locales/ca/LC_MESSAGES/attributes.po
@@ -9,6 +9,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ca\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Domain: attributes\n"
 
 msgid "aRecord"
 msgstr "aRecord"
