--- a/locales/lt/LC_MESSAGES/attributes.po
+++ b/locales/lt/LC_MESSAGES/attributes.po
@@ -9,6 +9,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: lt\n"
 "Plural-Forms: nplurals=3; plural=(n % 10 == 1 && (n % 100 < 11 || n % 100 > 19)) ? 0 : ((n % 10 >= 2 && n % 10 <= 9 && (n % 100 < 11 || n % 100 > 19)) ? 1 : 2);\n"
+"X-Domain: attributes\n"
 
 msgid "aRecord"
 msgstr "aRecord"
