--- a/locales/pl/LC_MESSAGES/attributes.po
+++ b/locales/pl/LC_MESSAGES/attributes.po
@@ -9,6 +9,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: pl\n"
 "Plural-Forms: nplurals=3; plural=(n == 1) ? 0 : ((n % 10 >= 2 && n % 10 <= 4 && (n % 100 < 12 || n % 100 > 14)) ? 1 : 2);\n"
+"X-Domain: attributes\n"
 
 msgid "aRecord"
 msgstr "aRecord"
