--- a/locales/st/LC_MESSAGES/attributes.po
+++ b/locales/st/LC_MESSAGES/attributes.po
@@ -10,6 +10,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Language: en\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Domain: attributes\n"
 
 msgid "aRecord"
 msgstr "aRecord"
